# messagebus-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  dashboard-1782928339365.json  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  send.sh
.github/workflows/: ci.yml
src/messagebus/: __main__.py  async_consumer.py  config.py  consumer.py  logging.py  metrics.py  producer.py  replay.py
tests/: conftest.py  test_producer.py
